1. Defined GET /api/css/valid_ids API spec. 2. Implemented GET /api/css/valid_ids API
